; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_dtrace.c_helper_ioctl.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_dtrace.c_helper_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @helper_ioctl(i32 %0, i32 %1, i32 %2, i32 %3, %struct.proc* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.proc*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store %struct.proc* %4, %struct.proc** %11, align 8
  store i32 0, i32* %13, align 4
  %14 = load i32, i32* %8, align 4
  %15 = load i32, i32* %9, align 4
  %16 = call i32 @dtrace_ioctl_helper(i32 %14, i32 %15, i32* %13)
  store i32 %16, i32* %12, align 4
  %17 = load i32, i32* %12, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %27

19:                                               ; preds = %5
  %20 = load i32, i32* %12, align 4
  %21 = and i32 %20, -4096
  %22 = icmp eq i32 %21, 0
  %23 = zext i1 %22 to i32
  %24 = call i32 @ASSERT(i32 %23)
  %25 = load i32, i32* %12, align 4
  %26 = and i32 %25, 4095
  store i32 %26, i32* %6, align 4
  br label %40

27:                                               ; preds = %5
  %28 = load i32, i32* %13, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %39

30:                                               ; preds = %27
  %31 = load i32, i32* %13, align 4
  %32 = and i32 %31, -1048576
  %33 = icmp eq i32 %32, 0
  %34 = zext i1 %33 to i32
  %35 = call i32 @ASSERT(i32 %34)
  %36 = load i32, i32* %13, align 4
  %37 = and i32 %36, 1048575
  %38 = shl i32 %37, 12
  store i32 %38, i32* %6, align 4
  br label %40

39:                                               ; preds = %27
  store i32 0, i32* %6, align 4
  br label %40

40:                                               ; preds = %39, %30, %19
  %41 = load i32, i32* %6, align 4
  ret i32 %41
}

declare dso_local i32 @dtrace_ioctl_helper(i32, i32, i32*) #1

declare dso_local i32 @ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
